--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   hive: ^2.0.5
   google_fonts: ^2.3.1
   hive_flutter: ^1.1.0
+  random_color: ^1.0.5
 
 dev_dependencies:
   flutter_test:
