--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,8 +51,12 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   hive_generator: ^1.1.2
   build_runner: ^2.1.7
+  flutter_launcher_icons: "^0.9.2"
 
-# For information on the generic Dart part of this file, see the
+flutter_icons:
+  android: "launcher_icon"
+  image_path: "assets/icon.png"
+# For information on the generic Dart part of this file, see the 
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
